--- a/index.html
+++ b/index.html
@@ -1,297 +1,249 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Attamation Room Control</title>
-  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(to bottom right, #1e1e2f, #2b2b45);
-      color: #f5f5f5;
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      padding: 20px;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-    .status-indicator {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 14px;
-    }
-    .indicator {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background: red;
-    }
-    .logo {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 24px;
-      font-weight: bold;
-      text-align: center;
-      flex-grow: 1;
-    }
-    .time-date {
-      font-size: 14px;
-      text-align: right;
-    }
-    .dashboard {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .panel {
-      flex: 1;
-      min-width: 300px;
-      background: #292947;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-    }
-    .panel-title {
-      font-weight: 600;
-      margin-bottom: 15px;
-      font-size: 16px;
-      color: #00ffff;
-    }
-    .temperature-display {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    .temperature-unit {
-      font-size: 18px;
-    }
-    .temperature-status {
-      font-size: 14px;
-      color: #4caf50;
-    }
-    .devices-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-    }
-    .device-card {
-      background: #3b3b5b;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
-    }
-    .device-icon i {
-      font-size: 20px;
-      margin-bottom: 5px;
-      color: #ffd700;
-    }
-    .device-name {
-      font-weight: 500;
-      margin-top: 5px;
-    }
-    .device-status {
-      font-size: 12px;
-      margin: 5px 0;
-    }
-    .toggle-switch {
-      position: relative;
-      display: inline-block;
-      width: 36px;
-      height: 20px;
-    }
-    .toggle-switch input {
-      display: none;
-    }
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0; left: 0;
-      right: 0; bottom: 0;
-      background-color: #ccc;
-      border-radius: 20px;
-      transition: .4s;
-    }
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 14px;
-      width: 14px;
-      left: 3px;
-      bottom: 3px;
-      background-color: white;
-      transition: .4s;
-      border-radius: 50%;
-    }
-    .toggle-switch input:checked + .slider {
-      background-color: #4caf50;
-    }
-    .toggle-switch input:checked + .slider:before {
-      transform: translateX(16px);
-    }
-    .notification {
-      margin-top: 30px;
-      background: #fff3cd;
-      border: 1px solid #ffeeba;
-      padding: 15px;
-      border-radius: 8px;
-      color: #000;
-    }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+<title>ATTAMATION - Soil Monitor</title>
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+<style>
+/* ====== CSS YANG SAMA PERSIS DARI PROGRAM ====== */
+:root {
+  --bg: #070617;
+  --card: #0f1220;
+  --accent: #00f1ff;
+  --accent2: #9b4dff;
+  --muted: #9aa3b2;
+  --glow: 0 8px 30px rgba(155, 77, 255, 0.12);
+}
+
+* { box-sizing: border-box; }
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', Arial, sans-serif;
+  background: radial-gradient(1200px 600px at 10% 10%, rgba(155, 77, 255, 0.06), transparent),
+    linear-gradient(180deg, #060613 0%, #0b0f1a 100%);
+  color: #e6eef8;
+  overflow-x: hidden;
+}
+
+.wrap { max-width: 1180px; margin: 0 auto; padding: 18px; }
+
+header {
+  display: flex; justify-content: space-between; align-items: center;
+  margin-bottom: 18px; flex-wrap: wrap; gap: 12px;
+}
+
+header h1 {
+  font-family: 'Orbitron', sans-serif; letter-spacing: 2px;
+  color: var(--accent2); margin: 0; font-size: 28px;
+}
+
+header .right { text-align: right; color: var(--muted); font-size: 14px; }
+
+.grid {
+  display: grid; grid-template-columns: 1fr 420px; gap: 18px;
+}
+
+.card {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), rgba(255, 255, 255, 0.007));
+  border-radius: 14px;
+  padding: 20px;
+  box-shadow: var(--glow);
+  border: 1px solid rgba(255, 255, 255, 0.03);
+}
+
+.big-stat {
+  display: flex; flex-direction: column; align-items: center;
+  justify-content: center; min-height: 360px;
+}
+
+.big-stat-header {
+  width: 100%;
+  display: flex; justify-content: space-between; align-items: center;
+  margin-bottom: 20px; flex-wrap: wrap; gap: 12px;
+}
+
+.big-stat-title { font-size: 16px; color: var(--muted); }
+
+.ip-info { text-align: right; }
+.ip-label { font-size: 12px; color: var(--muted); }
+.ip-value { font-weight: 700; color: var(--accent); }
+
+.big-value {
+  font-family: 'Orbitron', sans-serif;
+  color: var(--accent);
+  font-size: 96px;
+  text-shadow: 0 6px 30px rgba(0, 241, 255, 0.08);
+  line-height: 1;
+}
+
+.subtitle { color: var(--muted); margin-top: 8px; }
+
+.small-row {
+  display: flex; gap: 12px; margin-top: 18px;
+  justify-content: center; flex-wrap: wrap;
+}
+
+.stat-mini {
+  background: rgba(255, 255, 255, 0.02);
+  padding: 12px; border-radius: 10px;
+  min-width: 120px; text-align: center;
+}
+.stat-mini h4 { margin: 0; font-size: 16px; color: var(--muted); }
+.stat-mini p { margin: 6px 0 0 0; font-weight: 700; }
+
+/* Right side panel */
+.device-grid { display: grid; grid-template-columns: 1fr; gap: 12px; }
+
+.device-card {
+  background: linear-gradient(180deg, #0b0f1a, #0b0f1a);
+  padding: 16px; border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.02);
+}
+
+.control-header {
+  display: flex; justify-content: space-between;
+  align-items: center; margin-bottom: 14px; flex-wrap: wrap; gap: 12px;
+}
+
+.mode-select {
+  background: transparent; color: var(--accent);
+  border-radius: 8px; padding: 6px;
+  border: 1px solid rgba(255, 255, 255, 0.03);
+}
+
+.pump-state { color: #ff66a3; font-weight: 700; }
+
+.controls { margin-top: 12px; display: flex; gap: 8px; flex-wrap: wrap; }
+
+.setpoint-input {
+  padding: 8px; border-radius: 8px;
+  background: transparent; border: 1px solid rgba(255, 255, 255, 0.04);
+  color: var(--accent); width: 90px;
+}
+
+/* Buttons */
+.btn {
+  background: linear-gradient(90deg, var(--accent), var(--accent2));
+  color: #021; padding: 8px 12px; border-radius: 10px;
+  border: none; font-weight: 700; cursor: pointer; font-size: 14px;
+}
+
+.btn.secondary {
+  background: transparent; color: var(--muted);
+  border: 1px solid rgba(255, 255, 255, 0.03);
+}
+
+.manual-controls { display: none; gap: 8px; flex-wrap: wrap; }
+
+/* Responsive */
+@media (max-width: 900px) { .grid { grid-template-columns: 1fr; } }
+@media (max-width: 600px) {
+  .big-value { font-size: 56px; }
+  .controls { flex-direction: column; align-items: stretch; }
+  .btn { width: 100%; }
+}
+</style>
 </head>
 
 <body>
-  <div class="container">
-    <header>
-      <div class="status-indicator">
-        <div class="indicator" id="status-led"></div>
-        <span id="status-text">Offline</span>
-      </div>
-      <div class="logo">ATTAMATION</div>
-      <div class="time-date">
-        <div class="time" id="current-time">00:00:00</div>
-        <div class="date" id="current-date">January 1, 2023</div>
-      </div>
-    </header>
+<div class="wrap">
 
-    <div class="dashboard">
-      <div class="panel">
-        <div class="panel-title">
-          <i class="fas fa-thermometer-half"></i> ROOM TEMPERATURE
-        </div>
-        <div class="temperature-display">
-          <div class="temperature-value" id="temperature">24.5<span class="temperature-unit">°C</span></div>
-          <div class="temperature-status" id="temperature-status">Comfortable</div>
+  <header>
+    <h1>ATTAMATION</h1>
+    <div class="right">
+      <div id="clock">--:--:--</div>
+      <div id="date">--</div>
+    </div>
+  </header>
+
+  <div class="grid">
+
+    <!-- LEFT PANEL -->
+    <div class="card big-stat">
+      <div class="big-stat-header">
+        <div class="big-stat-title">ROOM SOIL MOISTURE</div>
+        <div class="ip-info">
+          <div class="ip-label">IP:</div>
+          <div class="ip-value">192.168.0.33</div>
         </div>
       </div>
 
-      <div class="panel">
-        <div class="panel-title">
-          <i class="fas fa-lightbulb"></i> DEVICE CONTROL
-        </div>
-        <div class="devices-grid">
-          <div class="device-card" data-device="relay1">
-            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
-            <div class="device-name">Relay 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" id="relay1Btn">
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card" data-device="relay2">
-            <div class="device-icon"><i class="fas fa-toggle-on"></i></div>
-            <div class="device-name">Relay 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" id="relay2Btn">
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 1</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
-          <div class="device-card">
-            <div class="device-icon"><i class="fas fa-ban"></i></div>
-            <div class="device-name">Spare 2</div>
-            <div class="device-status">OFF</div>
-            <label class="toggle-switch">
-              <input type="checkbox" disabled>
-              <span class="slider"></span>
-            </label>
-          </div>
-        </div>
+      <div class="big-value" id="soilPercent">--</div>
+      <div class="subtitle">Soil Moisture</div>
+
+      <div class="small-row">
+        <div class="stat-mini"><h4>Temperature</h4><p id="tempVal">-- °C</p></div>
+        <div class="stat-mini"><h4>Humidity</h4><p id="humVal">-- %</p></div>
+        <div class="stat-mini"><h4>Soil Raw</h4><p id="soilRaw">--</p></div>
       </div>
     </div>
 
-    <div class="notification" id="notification">
-      <div class="notification-title">System Alert</div>
-      <div class="notification-message" id="notification-message">Temperature is rising above normal levels.</div>
+    <!-- RIGHT PANEL -->
+    <div class="card">
+      <div class="control-header">
+        <div class="control-title">DEVICE CONTROL</div>
+
+        <select id="modeSelect" class="mode-select">
+          <option value="AUTO">AUTO</option>
+          <option value="MANUAL">MANUAL</option>
+        </select>
+      </div>
+
+      <div class="device-grid">
+        <div class="device-card">
+          <div class="device-row">
+            <div>
+              <div class="device-name">Water Pump</div>
+              <div class="device-desc">Pump for irrigation</div>
+            </div>
+            <div class="pump-status">
+              <div class="pump-state">OFF</div>
+              <div class="status-label">Status</div>
+            </div>
+          </div>
+
+          <div class="controls">
+            <input id="setpoint" type="number" min="0" max="100" value="40" class="setpoint-input"/>
+            <button class="btn">SET</button>
+
+            <div id="manualControls" class="manual-controls">
+              <button class="btn">TURN ON</button>
+              <button class="btn secondary">TURN OFF</button>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="info-text">
+          <div>Auto mode will run pump when soil % &lt; setpoint</div>
+          <div>Manual mode enables direct pump control</div>
+        </div>
+
+      </div>
     </div>
+
   </div>
+</div>
 
-  <script>
-    function updateDateTime() {
-      const now = new Date();
-      document.getElementById('current-time').textContent = now.toLocaleTimeString();
-      document.getElementById('current-date').textContent = now.toDateString();
-    }
-    setInterval(updateDateTime, 1000);
-    updateDateTime();
+<script>
+// Clock script
+function pad(n){return n<10?'0'+n:n;}
+function updateClock(){ 
+  var d=new Date(); 
+  document.getElementById('clock').innerText =
+    pad(d.getHours())+':'+pad(d.getMinutes())+':'+pad(d.getSeconds());
+  document.getElementById('date').innerText = d.toLocaleDateString();
+}
+setInterval(updateClock,1000);
+updateClock();
+</script>
 
-    // --- MQTT Connection ---
-    const client = mqtt.connect('wss://9fa472bc0c754eb488098ea8f4bb27f8.s1.eu.hivemq.cloud:8884/mqtt', {
-      clientId: 'webClient_' + Math.random().toString(16).substr(2, 8),
-      username: 'Attamationhtml',
-      password: 'Attamationhtml21',
-      clean: true,
-      connectTimeout: 4000
-    });
-
-    client.on('connect', () => {
-      console.log('Connected to MQTT Broker');
-      document.getElementById('status-led').style.background = 'lime';
-      document.getElementById('status-text').textContent = 'Online';
-      client.subscribe('esp/status/relay1');
-      client.subscribe('esp/status/relay2');
-      client.publish('esp/get_status', 'REQ');
-    });
-
-    client.on('message', (topic, message) => {
-      const state = message.toString();
-      let relay = '';
-      if (topic.includes('relay1')) {
-        relay = 'relay1';
-      } else if (topic.includes('relay2')) {
-        relay = 'relay2';
-      }
-      if (relay) {
-        const checkbox = document.getElementById(relay + 'Btn');
-        const card = checkbox.closest('.device-card');
-        const status = card.querySelector('.device-status');
-
-        checkbox.checked = state === 'ON';
-        status.textContent = state;
-      }
-    });
-
-    client.on('error', (error) => {
-      console.error('Connection error:', error);
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
-    });
-
-    client.on('close', () => {
-      console.log('Disconnected');
-      document.getElementById('status-led').style.background = 'red';
-      document.getElementById('status-text').textContent = 'Offline';
-    });
-
-    document.getElementById('relay1Btn').addEventListener('change', (e) => {
-      const state = e.target.checked ? 'ON' : 'OFF';
-      client.publish('esp/relay1', state);
-    });
-
-    document.getElementById('relay2Btn').addEventListener('change', (e) => {
-      const state = e.target.checked ? 'ON' : 'OFF';
-      client.publish('esp/relay2', state);
-    });
-  </script>
 </body>
 </html>
