--- a/index.html
+++ b/index.html
@@ -1,144 +1,199 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Device Configuration</title>
+    <meta charset="UTF-8">
+    <title>SOIL SYSTEM CONTROL</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style>
-body {
-  background: #0b0f1a;
-  color: #e6eef8;
-  font-family: Arial, sans-serif;
-  padding: 20px;
-}
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial;
+            background-color: #111;
+            color: white;
+        }
 
-.card {
-  background: #111726;
-  padding: 20px;
-  border-radius: 12px;
-  max-width: 600px;
-  margin: auto;
-  border: 1px solid rgba(255,255,255,0.1);
-  box-shadow: 0 0 20px rgba(0,0,50,0.3);
-}
+        .header {
+            padding: 15px;
+            background-color: #222;
+            font-size: 22px;
+            font-weight: bold;
+            position: relative;
+        }
 
-h2 {
-  margin-top: 0;
-  color: #00f1ff;
-  font-size: 22px;
-  text-align: center;
-}
+        /* Tombol WiFi Setup */
+        .wifi-btn {
+            position: absolute;
+            right: 15px;
+            top: 12px;
+            background-color: #0af;
+            color: black;
+            padding: 6px 12px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 14px;
+            cursor: pointer;
+        }
 
-label {
-  display: block;
-  margin-top: 12px;
-  font-size: 14px;
-  color: #9aa3b2;
-}
+        .container { margin: 20px; }
 
-input {
-  width: 100%;
-  padding: 10px;
-  margin-top: 6px;
-  border-radius: 8px;
-  border: none;
-  background: #0d1222;
-  color: #00f1ff;
-}
+        .card {
+            background-color: #222;
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
 
-button {
-  width: 100%;
-  padding: 12px;
-  margin-top: 20px;
-  border: none;
-  border-radius: 8px;
-  background: linear-gradient(90deg,#00f1ff,#9b4dff);
-  color: #021;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: 16px;
-}
+        .btn {
+            padding: 12px;
+            width: 100%;
+            font-size: 18px;
+            border: none;
+            border-radius: 10px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
 
-button:active {
-  transform: scale(0.97);
-}
+        .btn-on { background-color: #00e676; }
+        .btn-off { background-color: #ff1744; }
 
-.msg {
-  margin-top: 15px;
-  padding: 10px;
-  text-align: center;
-  border-radius: 6px;
-  display: none;
-}
-.msg.ok { background: #003d24; color: #00ff9d; }
-.msg.err { background: #3d0000; color: #ff8080; }
-</style>
+        /* ----------- POPUP WIFI SETUP ----------- */
+        #wifiPanel {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(0,0,0,0.9);
+            display: none;
+            padding: 20px;
+        }
 
+        .wifi-box {
+            background: #222;
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        select, input {
+            width: 100%;
+            padding: 12px;
+            border-radius: 8px;
+            border: none;
+            margin-top: 10px;
+            font-size: 16px;
+        }
+
+        .btn-save {
+            width: 100%;
+            background: #0af;
+            padding: 12px;
+            border: none;
+            color: black;
+            border-radius: 10px;
+            font-size: 18px;
+            margin-top: 20px;
+        }
+
+        .close-btn {
+            background: #ff1744;
+            padding: 8px 12px;
+            color: white;
+            float: right;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
 
-<div class="card">
-  <h2>WiFi & MQTT Configuration</h2>
+    <!-- Header -->
+    <div class="header">
+        SOIL SYSTEM
+        <div class="wifi-btn" onclick="openWifi()">WiFi Setup</div>
+    </div>
 
-  <label>WiFi SSID</label>
-  <input id="ssid" placeholder="Enter SSID" />
+    <!-- Kontrol Relay -->
+    <div class="container">
+        <div class="card">
+            <h3>Relay 1</h3>
+            <button class="btn btn-on" onclick="sendCmd('esp/relay1','ON')">ON</button>
+            <button class="btn btn-off" onclick="sendCmd('esp/relay1','OFF')">OFF</button>
+        </div>
 
-  <label>WiFi Password</label>
-  <input id="pass" placeholder="Enter Password" type="password" />
+        <div class="card">
+            <h3>Relay 2</h3>
+            <button class="btn btn-on" onclick="sendCmd('esp/relay2','ON')">ON</button>
+            <button class="btn btn-off" onclick="sendCmd('esp/relay2','OFF')">OFF</button>
+        </div>
+    </div>
 
-  <label>MQTT Server</label>
-  <input id="mqtt_server" placeholder="ex: broker.hivemq.com" />
+    <!-- POPUP WIFI SETUP -->
+    <div id="wifiPanel">
+        <div class="wifi-box">
+            <div class="close-btn" onclick="closeWifi()">X</div>
+            <h2>WiFi Setup</h2>
 
-  <label>MQTT Port</label>
-  <input id="mqtt_port" type="number" placeholder="8883" />
+            <label>SSID WiFi</label>
+            <select id="ssid"></select>
 
-  <label>MQTT Username</label>
-  <input id="mqtt_user" placeholder="MQTT Username" />
+            <label>Password</label>
+            <input type="password" id="pass">
 
-  <label>MQTT Password</label>
-  <input id="mqtt_pass" type="password" placeholder="MQTT Password" />
+            <button class="btn-save" onclick="saveWifi()">Save & Reboot</button>
+        </div>
+    </div>
 
-  <button onclick="saveConfig()">SAVE CONFIG</button>
+    <script>
 
-  <div class="msg" id="msg"></div>
-</div>
+        /* ---------------------- Relay Control ---------------------- */
+        function sendCmd(topic, msg) {
+            fetch("/api/mqtt?topic=" + topic + "&msg=" + msg)
+                .then(r => r.text())
+                .then(t => console.log(t));
+        }
 
-<script>
-function saveConfig() {
-  const data = {
-    ssid: document.getElementById("ssid").value,
-    pass: document.getElementById("pass").value,
-    mqtt_server: document.getElementById("mqtt_server").value,
-    mqtt_port: Number(document.getElementById("mqtt_port").value),
-    mqtt_user: document.getElementById("mqtt_user").value,
-    mqtt_pass: document.getElementById("mqtt_pass").value
-  };
+        /* ---------------------- WiFi Panel ---------------------- */
+        function openWifi() {
+            document.getElementById("wifiPanel").style.display = "block";
 
-  fetch("/api/save", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(data)
-  })
-  .then(r => {
-    if (r.status == 200) {
-      showMsg("Configuration saved. Restarting...", "ok");
-    } else {
-      showMsg("Failed to save config", "err");
-    }
-  })
-  .catch(() => {
-    showMsg("Cannot connect to ESP (If you open via GitHub, this is normal)", "err");
-  });
-}
+            // Load daftar SSID dari ESP
+            fetch("/wifi_scan")
+            .then(r => r.json())
+            .then(list => {
+                let sel = document.getElementById("ssid");
+                sel.innerHTML = "";
+                list.forEach(s => {
+                    let o = document.createElement("option");
+                    o.value = s;
+                    o.innerHTML = s;
+                    sel.appendChild(o);
+                });
+            });
+        }
 
-function showMsg(text, type) {
-  const box = document.getElementById("msg");
-  box.innerHTML = text;
-  box.className = "msg " + type;
-  box.style.display = "block";
-}
-</script>
+        function closeWifi() {
+            document.getElementById("wifiPanel").style.display = "none";
+        }
+
+        /* ---------------------- Save WiFi Config ---------------------- */
+        function saveWifi() {
+            let data = {
+                ssid: document.getElementById("ssid").value,
+                pass: document.getElementById("pass").value
+            };
+
+            fetch("/api/save_wifi", {
+                method: "POST",
+                headers: {"Content-Type": "application/json"},
+                body: JSON.stringify(data)
+            })
+            .then(r => r.text())
+            .then(t => {
+                alert("WiFi Saved!\nDevice will reboot...");
+            });
+        }
+
+    </script>
 
 </body>
 </html>
