--- a/index.html
+++ b/index.html
@@ -1,199 +1,184 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>SOIL SYSTEM CONTROL</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- tambahkan sebelum </body> atau ganti script fetchData lama -->
+<script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+<script>
+/* CONFIG - isi sesuai HiveMQ Cloud Anda */
+const WS_HOST = "a83ccc7ca89145d195e89865c270d0f2.s1.eu.hivemq.cloud";
+const WS_PORT = 8884; // HiveMQ Cloud WebSocket TLS port (wss)
+const WS_PATH = "/mqtt"; // kadang broker pakai path /mqtt; jika gagal, coba "" atau "/mqtt"
+const MQTT_USER = "Soil_System";
+const MQTT_PASS = "Soilsystem123";
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial;
-            background-color: #111;
-            color: white;
-        }
+/* topics (sama seperti device) */
+const TOPICS = {
+  temp: "soil/temperature",
+  hum: "soil/humidity",
+  moisture: "soil/moisture",
+  raw: "soil/raw",
+  pumpStatus: "soil/pump/status",
+  modeStatus: "soil/mode/status",
+  setpointStatus: "soil/setpoint/status",
+  pumpSet: "soil/pump/set",
+  modeSet: "soil/mode/set",
+  setpointSet: "soil/setpoint/set",
+  getStatus: "soil/get_status"
+};
 
-        .header {
-            padding: 15px;
-            background-color: #222;
-            font-size: 22px;
-            font-weight: bold;
-            position: relative;
-        }
+let useMQTT = false;
+let mqttClient = null;
+let userIsEditingSetpoint = false;
+let lastServerSetpoint = 40;
 
-        /* Tombol WiFi Setup */
-        .wifi-btn {
-            position: absolute;
-            right: 15px;
-            top: 12px;
-            background-color: #0af;
-            color: black;
-            padding: 6px 12px;
-            border-radius: 6px;
-            text-decoration: none;
-            font-size: 14px;
-            cursor: pointer;
-        }
+// existing UI helpers (clock etc.)
+function pad(n){return n<10?'0'+n:n;}
+function updateClock(){ 
+  var d=new Date(); 
+  document.getElementById('clock').innerText = pad(d.getHours())+':'+pad(d.getMinutes())+':'+pad(d.getSeconds()); 
+  document.getElementById('date').innerText = d.toLocaleDateString(); 
+}
+setInterval(updateClock,1000); updateClock();
 
-        .container { margin: 20px; }
+// UI editing handlers (same as before)
+document.getElementById('setpoint').addEventListener('focus', ()=> userIsEditingSetpoint = true);
+document.getElementById('setpoint').addEventListener('blur', ()=> setTimeout(()=> userIsEditingSetpoint=false,300));
+document.getElementById('setpoint').addEventListener('input', ()=> userIsEditingSetpoint = true);
 
-        .card {
-            background-color: #222;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
+// MQTT connect attempt
+function startMQTT() {
+  try {
+    // build URL: wss://host:port/path
+    let url = `wss://${WS_HOST}:${WS_PORT}${WS_PATH}`;
+    // client id
+    const clientId = 'webui-' + Math.random().toString(16).substr(2, 8);
+    mqttClient = mqtt.connect(url, {
+      clientId,
+      username: MQTT_USER,
+      password: MQTT_PASS,
+      keepalive: 30,
+      reconnectPeriod: 5000,
+      rejectUnauthorized: false // if broker has cert issues; set true for prod
+    });
 
-        .btn {
-            padding: 12px;
-            width: 100%;
-            font-size: 18px;
-            border: none;
-            border-radius: 10px;
-            margin-top: 10px;
-            cursor: pointer;
-        }
+    mqttClient.on('connect', function () {
+      console.log('MQTT connected via WSS');
+      useMQTT = true;
+      // subscribe to status topics
+      mqttClient.subscribe(Object.values({
+        pumpStatus: TOPICS.pumpStatus,
+        modeStatus: TOPICS.modeStatus,
+        setpointStatus: TOPICS.setpointStatus,
+        temp: TOPICS.temp,
+        hum: TOPICS.hum,
+        moisture: TOPICS.moisture,
+        raw: TOPICS.raw
+      }));
+      // request current status
+      mqttClient.publish(TOPICS.getStatus, "");
+    });
 
-        .btn-on { background-color: #00e676; }
-        .btn-off { background-color: #ff1744; }
+    mqttClient.on('message', function (topic, payload) {
+      const msg = payload.toString();
+      // Update UI according to topic
+      if (topic === TOPICS.pumpStatus) {
+        document.getElementById('pumpState').innerText = msg;
+      } else if (topic === TOPICS.modeStatus) {
+        document.getElementById('modeSelect').value = msg;
+        if (msg === 'MANUAL') document.getElementById('manualControls').style.display = 'flex';
+        else document.getElementById('manualControls').style.display = 'none';
+      } else if (topic === TOPICS.setpointStatus) {
+        if (!userIsEditingSetpoint) { document.getElementById('setpoint').value = msg; lastServerSetpoint = parseInt(msg||0); }
+      } else if (topic === TOPICS.temp) {
+        document.getElementById('tempVal').innerText = (msg==='null' ? '--' : parseFloat(msg).toFixed(1)+' °C');
+      } else if (topic === TOPICS.hum) {
+        document.getElementById('humVal').innerText = (msg==='null' ? '--' : parseFloat(msg).toFixed(1)+' %');
+      } else if (topic === TOPICS.moisture) {
+        document.getElementById('soilPercent').innerText = msg + ' %';
+      } else if (topic === TOPICS.raw) {
+        document.getElementById('soilRaw').innerText = msg;
+      }
+    });
 
-        /* ----------- POPUP WIFI SETUP ----------- */
-        #wifiPanel {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9);
-            display: none;
-            padding: 20px;
-        }
+    mqttClient.on('error', function(err){ console.warn('MQTT err', err); });
+    mqttClient.on('close', function(){ console.log('MQTT closed'); useMQTT = false; });
+  } catch (e) {
+    console.warn('MQTT start failed', e);
+    useMQTT = false;
+  }
+}
 
-        .wifi-box {
-            background: #222;
-            padding: 20px;
-            border-radius: 10px;
-        }
+// fallback polling via local API
+async function fetchLocalData(){
+  try {
+    const res = await fetch('/api/data');
+    if (!res.ok) throw new Error('no local api');
+    const j = await res.json();
+    document.getElementById('soilPercent').innerText = j.soilPercent + ' %';
+    document.getElementById('soilRaw').innerText = j.soilRaw;
+    document.getElementById('tempVal').innerText = (j.temp <= -90 ? '--' : j.temp.toFixed(1)+' °C');
+    document.getElementById('humVal').innerText = (j.hum <= -0.5 ? '--' : j.hum.toFixed(1)+' %');
+    document.getElementById('pumpState').innerText = j.pump;
+    document.getElementById('modeSelect').value = j.mode;
+    if (!userIsEditingSetpoint) { document.getElementById('setpoint').value = j.setpoint; }
+    if (j.mode === 'MANUAL') document.getElementById('manualControls').style.display = 'flex';
+    else document.getElementById('manualControls').style.display = 'none';
+    document.querySelector('.ip-value').innerText = location.hostname;
+    return true;
+  } catch (e) {
+    // local API not available
+    return false;
+  }
+}
 
-        select, input {
-            width: 100%;
-            padding: 12px;
-            border-radius: 8px;
-            border: none;
-            margin-top: 10px;
-            font-size: 16px;
-        }
+// unified fetchData: try MQTT first, otherwise local API
+async function fetchData(){
+  if (useMQTT) {
+    // when using MQTT we don't poll for sensor values, rely on broker updates.
+    // But we can still update IP label
+    document.querySelector('.ip-value').innerText = location.hostname;
+    return;
+  } else {
+    await fetchLocalData();
+  }
+}
 
-        .btn-save {
-            width: 100%;
-            background: #0af;
-            padding: 12px;
-            border: none;
-            color: black;
-            border-radius: 10px;
-            font-size: 18px;
-            margin-top: 20px;
-        }
+// UI actions (mode, setpoint, pump) - will publish via MQTT if available, else call local API
+async function setMode(mode) {
+  if (useMQTT && mqttClient && mqttClient.connected) {
+    mqttClient.publish(TOPICS.modeSet, mode);
+  } else {
+    await fetch('/api/setmode', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({mode:mode})});
+  }
+}
+async function setSetpoint(sp) {
+  if (useMQTT && mqttClient && mqttClient.connected) {
+    mqttClient.publish(TOPICS.setpointSet, String(sp));
+  } else {
+    await fetch('/api/setpoint', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({setpoint:sp})});
+  }
+}
+async function setPump(state) {
+  // state: 1 = ON, 0 = OFF
+  if (useMQTT && mqttClient && mqttClient.connected) {
+    mqttClient.publish(TOPICS.pumpSet, state ? 'ON' : 'OFF');
+  } else {
+    await fetch('/api/pump', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({state: state})});
+  }
+}
 
-        .close-btn {
-            background: #ff1744;
-            padding: 8px 12px;
-            color: white;
-            float: right;
-            border-radius: 6px;
-            cursor: pointer;
-        }
-    </style>
-</head>
+// wire UI buttons
+document.getElementById('modeSelect').addEventListener('change', async function(){
+  await setMode(this.value);
+});
+document.getElementById('setBtn').addEventListener('click', async function(){
+  const sp = parseInt(document.getElementById('setpoint').value);
+  userIsEditingSetpoint = false;
+  await setSetpoint(sp);
+  setTimeout(fetchData, 500);
+});
+document.getElementById('pumpOn').addEventListener('click', ()=> setPump(1));
+document.getElementById('pumpOff').addEventListener('click', ()=> setPump(0));
 
-<body>
-
-    <!-- Header -->
-    <div class="header">
-        SOIL SYSTEM
-        <div class="wifi-btn" onclick="openWifi()">WiFi Setup</div>
-    </div>
-
-    <!-- Kontrol Relay -->
-    <div class="container">
-        <div class="card">
-            <h3>Relay 1</h3>
-            <button class="btn btn-on" onclick="sendCmd('esp/relay1','ON')">ON</button>
-            <button class="btn btn-off" onclick="sendCmd('esp/relay1','OFF')">OFF</button>
-        </div>
-
-        <div class="card">
-            <h3>Relay 2</h3>
-            <button class="btn btn-on" onclick="sendCmd('esp/relay2','ON')">ON</button>
-            <button class="btn btn-off" onclick="sendCmd('esp/relay2','OFF')">OFF</button>
-        </div>
-    </div>
-
-    <!-- POPUP WIFI SETUP -->
-    <div id="wifiPanel">
-        <div class="wifi-box">
-            <div class="close-btn" onclick="closeWifi()">X</div>
-            <h2>WiFi Setup</h2>
-
-            <label>SSID WiFi</label>
-            <select id="ssid"></select>
-
-            <label>Password</label>
-            <input type="password" id="pass">
-
-            <button class="btn-save" onclick="saveWifi()">Save & Reboot</button>
-        </div>
-    </div>
-
-    <script>
-
-        /* ---------------------- Relay Control ---------------------- */
-        function sendCmd(topic, msg) {
-            fetch("/api/mqtt?topic=" + topic + "&msg=" + msg)
-                .then(r => r.text())
-                .then(t => console.log(t));
-        }
-
-        /* ---------------------- WiFi Panel ---------------------- */
-        function openWifi() {
-            document.getElementById("wifiPanel").style.display = "block";
-
-            // Load daftar SSID dari ESP
-            fetch("/wifi_scan")
-            .then(r => r.json())
-            .then(list => {
-                let sel = document.getElementById("ssid");
-                sel.innerHTML = "";
-                list.forEach(s => {
-                    let o = document.createElement("option");
-                    o.value = s;
-                    o.innerHTML = s;
-                    sel.appendChild(o);
-                });
-            });
-        }
-
-        function closeWifi() {
-            document.getElementById("wifiPanel").style.display = "none";
-        }
-
-        /* ---------------------- Save WiFi Config ---------------------- */
-        function saveWifi() {
-            let data = {
-                ssid: document.getElementById("ssid").value,
-                pass: document.getElementById("pass").value
-            };
-
-            fetch("/api/save_wifi", {
-                method: "POST",
-                headers: {"Content-Type": "application/json"},
-                body: JSON.stringify(data)
-            })
-            .then(r => r.text())
-            .then(t => {
-                alert("WiFi Saved!\nDevice will reboot...");
-            });
-        }
-
-    </script>
-
-</body>
-</html>
+// initialization: try MQTT, then start polling fallback
+startMQTT();
+setInterval(fetchData, 1500);
+fetchData();
+</script>
